# oslks-telemetry

./: .env.example  .gitignore  LICENSE  README.md  ROADMAP.md  docker-compose.yml  test_db.js  test_db2.js
.gitea/workflows/: docker-build.yml
.github/workflows/: docker-build.yml
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md
backend/.sqlx/: query-2343c194c9c6488d3b6c46748c93d048a93050865995d4183126b65f86c30750.json  query-2fcf88d652f9279d34bcbe67d22eb0cc658971ff0249285f233137fdb3fe8095.json  query-3e95a0e723c9434025ed11c28f571b08375d17f4227122b3ea74cb3fabad39cc.json  query-62ce18f739601c7081e92f9551798346af6dec4804cc5ca3bce06643eccc32c9.json  query-899c5c7ad1273bd2e1e897954bda104f82960b95701813ee00608cc9dc480025.json  query-b85b4b8566ee7f52f6fe3ed45fad0e57acd1504085f1b887274b73f00faab311.json  query-e1813a38a7cae4bbe305d51d5a8be0e48e44f91fbab388b02be4f6cd63bacb9c.json  query-e6dc93628b85f77c88ad47f60a066c8d5dacd2c539150c3c4382032e1e87c216.json
backend/migrations/: 20260206_initial_schema.sql  20260212_hourly_stats.sql  20260228_fix_sessions_table.sql  20260304094543_add_share_config.sql  20260304171012_team_invitations.sql  20260310113500_retention_policy.sql
backend/scripts/: reset_db.sh
backend/src/: config.rs  domain_cache.rs  main.rs  pinger.rs
backend/src/api/: error.rs  handlers.rs  mod.rs  ws.rs
backend/src/api/dashboard/: analytics.rs  api_keys.rs  auth.rs  config.rs  install.rs  mod.rs  settings.rs  teams.rs  users.rs  websites.rs
backend/src/auth/: middleware.rs  mod.rs  permissions.rs  session.rs
backend/src/db/: mod.rs  models.rs
backend/src/tracker/: script.js
backend/src/utils/: bot_detection.rs  email.rs  geoip.rs  metadata.rs  mod.rs  session.rs
dashboard-api/: .dockerignore  Dockerfile  package-lock.json  package.json  test-db.js  tsconfig.json
dashboard-api/src/: index.ts
frontend-react/: Caddyfile  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
(+61 files in other folders)
